removed channel info, and theme color updated, disabled emojis

--- a/src/styles/_light-theme.scss
+++ b/src/styles/_light-theme.scss
@@ -1,9 +1,9 @@
 // Color set
 
 :root {
-  --sendbird-light-primary-500: #491389;
-  --sendbird-light-primary-400: #6211c8;
-  --sendbird-light-primary-300: #742ddd;
+  --sendbird-light-primary-500: #09a2ee;
+  --sendbird-light-primary-400: #179cde;
+  --sendbird-light-primary-300: #209AD6;
   --sendbird-light-primary-200: #c2a9fa;
   --sendbird-light-primary-100: #dbd1ff;
 
