--- a/src/ui/ChannelPreview/index.scss
+++ b/src/ui/ChannelPreview/index.scss
@@ -122,7 +122,8 @@
   @include themed() {
     border-left: solid 4px t(primary-3);
     border-bottom: solid 1px t(on-bg-4);
-    background-color: t(primary--1-7);
+    // background-color: t(primary--1-7);
+    background-color: t(bg--1-3);
   }
   padding: 12px 16px 12px 12px;
 
