Removed leave channel and added invite list

--- a/src/styles/_light-theme.scss
+++ b/src/styles/_light-theme.scss
@@ -4,8 +4,8 @@
   --sendbird-light-primary-500: #09a2ee;
   --sendbird-light-primary-400: #179cde;
   --sendbird-light-primary-300: #209AD6;
-  --sendbird-light-primary-200: #c2a9fa;
-  --sendbird-light-primary-100: #dbd1ff;
+  --sendbird-light-primary-200: #a0d1e8;
+  --sendbird-light-primary-100: #c7e6f5;
 
   --sendbird-light-secondary-500: #066858;
   --sendbird-light-secondary-400: #027d69;
