--- a/src/ui/ChannelPreview/index.scss
+++ b/src/ui/ChannelPreview/index.scss
@@ -109,7 +109,7 @@
     }
 
     .sendbird-channel-preview__content__upper__last-message-at {
-      display: none;
+      // display: none;
     }
 
     .sendbird-channel-preview__content__lower__unread-message-count {
